--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.396.0",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "react": "^18",
     "react-axios": "^2.0.6",
     "react-dom": "^18",
